--- a/index.html
+++ b/index.html
@@ -5,35 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Swift — Home</title>
 
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Design Tokens + Estilos -->
     <link href="css/tokens.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="bg-body">
-    <!-- ================= HEADER ================= -->
     <header class="shadow-sm bg-white">
-      <!-- Linha 1: logo / loja / busca / conta / carrinho -->
       <div class="container py-3">
         <div class="d-flex align-items-center gap-3 flex-wrap">
-          <!-- LOGO -->
           <a href="index.html" class="navbar-brand p-0 me-auto me-lg-0">
             <img src="img/banners/swift logo 1.png" alt="Swift" width="96" />
           </a>
-
-          <!-- Seletor de loja/CEP -->
           <button class="store-chip" id="btnStore" type="button">
             Swift - Oscar Freire<br />
             <span class="cep">CEP: 01426-000</span>
           </button>
-
-          <!-- Busca -->
           <form
             class="flex-grow-1 d-none d-md-flex"
             role="search"
@@ -62,8 +52,6 @@
               </button>
             </div>
           </form>
-
-          <!-- Conta / Carrinho -->
           <div class="d-flex align-items-center gap-2 ms-auto">
             <a
               href="pages/login.html"
@@ -101,11 +89,8 @@
           </div>
         </div>
       </div>
-
-      <!-- ================= BANNER INICIAL ================= -->
       <section class="container my-4">
         <div class="hero-banner rounded-4 overflow-hidden">
-          <!-- coloque suas imagens em /img/hero.jpg e /img/hero-mobile.jpg -->
           <img
             src="img/banners/banner-swift.png"
             alt="Promoções Swift"
@@ -118,8 +103,6 @@
           />
         </div>
       </section>
-
-      <!-- Linha 2: categorias (scroll horizontal) -->
       <nav class="border-top border-bottom bg-white">
         <div class="container">
           <div class="categories scroller-x py-2">
@@ -217,8 +200,6 @@
         </div>
       </nav>
     </header>
-
-    <!-- =============== BANNER SELEÇÃO DE PRODUTOS ================= -->
     <section class="container my-5">
       <div class="selection-wrap rounded-4 overflow-hidden">
         <div class="row g-0 align-items-center">
@@ -244,8 +225,6 @@
               </button>
             </div>
           </div>
-
-          <!-- Coluna direita: carrossel -->
           <div class="col-lg-8 p-3 position-relative">
             <div
               id="selectionCarousel"
@@ -254,10 +233,8 @@
               data-bs-interval="0"
             >
               <div class="carousel-inner">
-                <!-- SLIDE 1 -->
                 <div class="carousel-item active">
                   <div class="row g-3">
-                    <!-- CARD 1 -->
                     <div class="col-12 col-md-6 col-xl-4">
                       <a
                         href="pages/detalhe-produto.html"
@@ -283,8 +260,6 @@
                         </div>
                       </a>
                     </div>
-
-                    <!-- CARD 2 -->
                     <div class="col-12 col-md-6 col-xl-4">
                       <a
                         href="pages/detalhe-produto.html"
@@ -310,8 +285,6 @@
                         </div>
                       </a>
                     </div>
-
-                    <!-- CARD 3 -->
                     <div class="col-12 col-md-6 col-xl-4">
                       <a
                         href="pages/detalhe-produto.html"
@@ -339,8 +312,6 @@
                     </div>
                   </div>
                 </div>
-
-                <!-- SLIDE 2 -->
                 <div class="carousel-item">
                   <div class="row g-3">
                     <div class="col-12 col-md-6 col-xl-4">
@@ -414,8 +385,6 @@
                   </div>
                 </div>
               </div>
-
-              <!-- CONTROLES (setas) -->
               <button
                 class="carousel-control-prev selection-control"
                 type="button"
@@ -445,8 +414,6 @@
         </div>
       </div>
     </section>
-
-    <!-- ================ CHURRASCO NO PONTO ================ -->
     <section class="container my-5">
       <h2 class="churrasco-title text-center mb-4">
         CHURRASCO NO PONTO, SABOR DE VERDADE!
@@ -459,10 +426,8 @@
         data-bs-interval="0"
       >
         <div class="carousel-inner">
-          <!-- SLIDE 1 -->
           <div class="carousel-item active">
             <div class="row g-3">
-              <!-- CARD 1 -->
               <div class="col-12 col-md-6 col-lg-3">
                 <a
                   href="pages/detalhe-produto.html"
@@ -490,8 +455,6 @@
                   </div>
                 </a>
               </div>
-
-              <!-- CARD 2 -->
               <div class="col-12 col-md-6 col-lg-3">
                 <a
                   href="pages/detalhe-produto.html"
@@ -517,8 +480,6 @@
                   </div>
                 </a>
               </div>
-
-              <!-- CARD 3 -->
               <div class="col-12 col-md-6 col-lg-3">
                 <a
                   href="pages/detalhe-produto.html"
@@ -544,8 +505,6 @@
                   </div>
                 </a>
               </div>
-
-              <!-- CARD 4 -->
               <div class="col-12 col-md-6 col-lg-3">
                 <a
                   href="pages/detalhe-produto.html"
@@ -573,10 +532,7 @@
               </div>
             </div>
           </div>
-          <!-- FIM SLIDE 1 -->
         </div>
-
-        <!-- CONTROLES -->
         <button
           class="carousel-control-prev bbq-control"
           type="button"
@@ -597,60 +553,46 @@
         </button>
       </div>
     </section>
-
-    <!-- ================= BANNER PROGRAMA DE PONTOS ================= -->
     <section class="container my-4">
       <div class="hero-banner rounded-4 overflow-hidden position-relative">
-        <!-- Imagem desktop -->
         <img
           src="img/banners/banner-pontos.png"
           alt="Programa de Pontos Swift"
           class="w-100 d-none d-md-block"
         />
-        <!-- Imagem mobile -->
         <img
           src="img/hero-mobile.jpg"
           alt="Programa de Pontos Swift"
           class="w-100 d-md-none"
         />
-
-        <!-- Botão clicável em cima do botão da arte -->
         <a href="pages/pontos.html" class="btn btn-cta btn-programa"
           >CONHECER O PROGRAMA</a
         >
       </div>
-    </section>
-
-    <!-- ================= BANNER SWIFT BOX ================= -->
+    </section>ß
     <section class="container my-4">
       <div class="hero-banner rounded-4 overflow-hidden position-relative">
-        <!-- Imagem desktop -->
         <img
           src="img/banners/banner-box.png"
           alt="Programa de Swiftbox"
           class="w-100 d-none d-md-block"
         />
-        <!-- Imagem mobile -->
         <img
           src="img/hero-mobile.jpg"
           alt="Programa de Swiftbox"
           class="w-100 d-md-none"
         />
-
-        <!-- Botão clicável em cima do botão da arte -->
-        <a href="pages/pontos.html" class="btn btn-cta btn-programa"
+        <a href="pages/box-swift.html" class="btn btn-cta btn-programa"
           >CONHECER O SWIFTBOX</a
         >
       </div>
     </section>
-    <!-- ================= RECEITAS ================= -->
     <section class="container my-5 receitas-section">
       <h2 class="receitas-title text-center mb-4">
         CONFIRA AS MELHORES <span>RECEITAS</span>
       </h2>
 
       <div class="row g-4">
-        <!-- CARD 1 -->
         <div class="col-12 col-md-6 col-lg-3">
           <a
             href="pages/detalhe-produto.html"
@@ -673,8 +615,6 @@
             </div>
           </a>
         </div>
-
-        <!-- CARD 2 -->
         <div class="col-12 col-md-6 col-lg-3">
           <a
             href="pages/detalhe-produto.html"
@@ -697,8 +637,6 @@
             </div>
           </a>
         </div>
-
-        <!-- CARD 3 -->
         <div class="col-12 col-md-6 col-lg-3">
           <a
             href="pages/detalhe-produto.html"
@@ -723,8 +661,6 @@
             </div>
           </a>
         </div>
-
-        <!-- CARD 4 -->
         <div class="col-12 col-md-6 col-lg-3">
           <a
             href="pages/detalhe-produto.html"
@@ -750,19 +686,14 @@
           </a>
         </div>
       </div>
-
-      <!-- Botão CTA -->
       <div class="text-center mt-4">
         <a href="pages/receitas.html" class="btn btn-receitas"
           >VER TODAS AS RECEITAS</a
         >
       </div>
     </section>
-
-    <!-- ================= BANNER GALERIA - VER COMO FAZ DEPOIS ================= -->
     <section class="container my-4">
       <div class="hero-banner rounded-4 overflow-hidden">
-        <!-- coloque suas imagens em /img/hero.jpg e /img/hero-mobile.jpg -->
         <img
           src="img/banners/sessão 6 (banners).png"
           alt="Promoções Swift"
@@ -775,13 +706,9 @@
         />
       </div>
     </section>
-
-    <!-- ================= BANNER FOOTER ================= -->
     <footer class="footer-swift text-light">
       <div class="container">
-        <!-- topo: colunas -->
         <div class="footer-top">
-          <!-- Coluna 1: marca + formas de pagamento -->
           <div class="f-col">
             <img
               src="img/banners/swift logo 1.png"
@@ -799,8 +726,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Coluna 2: Fale Conosco -->
           <div class="f-col">
             <p class="f-heading">Fale conosco</p>
 
@@ -840,8 +765,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Coluna 3: Ajuda e Informações -->
           <div class="f-col">
             <p class="f-heading">Ajuda e Informações</p>
             <ul class="f-links">
@@ -850,8 +773,6 @@
               <li><a href="#">Dúvidas Frequentes</a></li>
             </ul>
           </div>
-
-          <!-- Coluna 4: Sua compra -->
           <div class="f-col">
             <p class="f-heading">Sua Compra</p>
             <ul class="f-links">
@@ -862,8 +783,6 @@
               <li><a href="#">Encarte Digital</a></li>
             </ul>
           </div>
-
-          <!-- Coluna 5: Institucional -->
           <div class="f-col">
             <p class="f-heading">Institucional</p>
             <ul class="f-links">
@@ -873,8 +792,6 @@
             </ul>
           </div>
         </div>
-
-        <!-- middle: CTAs + horários -->
         <div class="footer-cta">
           <a
             href="https://wa.me/551140208558"
@@ -920,8 +837,6 @@
             </p>
           </div>
         </div>
-
-        <!-- bottom: redes + direitos -->
         <div class="footer-bottom">
           <div class="socials">
             <a href="#" aria-label="Instagram"
