--- a/pages/login.html
+++ b/pages/login.html
@@ -1,12 +1,9 @@
-<!-- /pages/_base-page.html  -->
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Swift — Login</title>
-
-    <!-- CSS (mesmos do index) -->
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap"
@@ -20,7 +17,6 @@
     />
   </head>
   <body class="bg-body">
-    <!-- ================= HEADER NÃO ALTERAR ================= -->
     <header class="shadow-sm bg-white">
       <div class="container py-3">
         <div class="d-flex align-items-center gap-3 flex-wrap">
@@ -212,7 +208,6 @@
               </h1>
 
               <form id="loginForm" novalidate>
-                <!-- E-mail -->
                 <div class="mb-3">
                   <label for="email" class="form-label">E-mail</label>
                   <input
@@ -225,7 +220,6 @@
                   />
                 </div>
 
-                <!-- Senha + olhinho -->
                 <div class="mb-2">
                   <label for="password" class="form-label">Senha</label>
                   <div class="input-group">
@@ -249,15 +243,12 @@
                   </div>
                 </div>
 
-                <!-- Ações principais -->
                 <a
                   href="./index-logado.html"
                   class="btn btn-brand btn-lg w-100"
                 >
                   <span>Continuar</span>
                 </a>
-
-                <!-- Opções auxiliares -->
                 <div
                   class="d-flex align-items-center justify-content-between mb-3"
                 >
@@ -276,10 +267,8 @@
                   >
                 </div>
 
-                <!-- Divisor -->
                 <div class="divider my-3"><span>ou</span></div>
 
-                <!-- Botão Google (mockado) -->
                 <a
                   href="./mock-login-google.html"
                   class="btn btn-login-google w-100"
@@ -306,14 +295,12 @@
       </div>
     </main>
 
-    <script src="../js/main.js"></script> <!-- teste --- Link para o arquivo JS -->
+    <script src="../js/main.js"></script>
+    <!-- teste --- Link para o arquivo JS -->
 
-    <!-- ================= RODAPÉ NAO ALTERAR ================= -->
     <footer class="footer-swift text-light">
       <div class="container">
-        <!-- topo: colunas -->
         <div class="footer-top">
-          <!-- Coluna 1: marca + formas de pagamento -->
           <div class="f-col">
             <img
               src="../img/banners/swift logo 1.png"
@@ -335,7 +322,6 @@
             </div>
           </div>
 
-          <!-- Coluna 2: Fale Conosco -->
           <div class="f-col">
             <p class="f-heading">Fale conosco</p>
 
@@ -375,8 +361,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Coluna 3: Ajuda e Informações -->
           <div class="f-col">
             <p class="f-heading">Ajuda e Informações</p>
             <ul class="f-links">
@@ -385,8 +369,6 @@
               <li><a href="#">Dúvidas Frequentes</a></li>
             </ul>
           </div>
-
-          <!-- Coluna 4: Sua compra -->
           <div class="f-col">
             <p class="f-heading">Sua Compra</p>
             <ul class="f-links">
@@ -398,7 +380,6 @@
             </ul>
           </div>
 
-          <!-- Coluna 5: Institucional -->
           <div class="f-col">
             <p class="f-heading">Institucional</p>
             <ul class="f-links">
@@ -408,8 +389,6 @@
             </ul>
           </div>
         </div>
-
-        <!-- middle: CTAs + horários -->
         <div class="footer-cta">
           <a
             href="https://wa.me/551140208558"
@@ -459,8 +438,6 @@
             </p>
           </div>
         </div>
-
-        <!-- bottom: redes + direitos -->
         <div class="footer-bottom">
           <div class="socials">
             <a href="#" aria-label="Instagram"
