--- a/pages/detalhe-produto.html
+++ b/pages/detalhe-produto.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Swift — produto</title>
-
-    <!-- CSS (página dentro de /pages) -->
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap"
@@ -15,22 +13,16 @@
     <link href="../css/style.css" rel="stylesheet" />
   </head>
   <body class="bg-body">
-    <!-- ================= HEADER ================= -->
     <header class="shadow-sm bg-white">
       <div class="container py-3">
         <div class="d-flex align-items-center gap-3 flex-wrap">
-          <!-- LOGO -->
           <a href="../index.html" class="navbar-brand p-0 me-auto me-lg-0">
             <img src="../img/banners/swift logo 1.png" alt="Swift" width="96" />
           </a>
-
-          <!-- Loja / CEP -->
           <button class="store-chip" type="button">
             Swift - Oscar Freire<br />
             <span class="cep">CEP: 01426-000</span>
           </button>
-
-          <!-- Busca -->
           <form
             class="flex-grow-1 d-none d-md-flex"
             role="search"
@@ -54,8 +46,6 @@
               </button>
             </div>
           </form>
-
-          <!-- Conta / Carrinho -->
           <div class="d-flex align-items-center gap-2 ms-auto">
             <a
               href="./login.html"
@@ -92,8 +82,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Categorias -->
       <nav class="border-top border-bottom bg-white">
         <div class="container">
           <div class="categories scroller-x py-2">
@@ -182,11 +170,8 @@
         </div>
       </nav>
     </header>
-
-    <!-- ================== CONTEÚDO ================== -->
     <main class="container my-4">
       <div class="row g-4">
-        <!-- Imagem -->
         <div class="col-lg-5">
           <img
             src="../img/produtos/Product Details Images.png"
@@ -194,8 +179,6 @@
             class="w-100 rounded-3 border"
           />
         </div>
-
-        <!-- Título / Preço / CTA -->
         <div class="col-lg-7">
           <h1 class="h3 mb-2">Almôndegas Bovinas Swift 500g</h1>
 
@@ -240,11 +223,7 @@
             >
           </div>
         </div>
-        <!-- /col-lg-7 -->
       </div>
-      <!-- /row -->
-
-      <!-- ===== Abas (Descrição, Modo de Preparo, Receitas) ===== -->
       <section class="mt-5">
         <ul class="nav nav-tabs" id="tabProduto" role="tablist">
           <li class="nav-item" role="presentation">
@@ -295,7 +274,6 @@
           class="tab-content border border-top-0 rounded-bottom p-3"
           id="tabProdutoContent"
         >
-          <!-- Descrição -->
           <div
             class="tab-pane fade show active"
             id="pane-desc"
@@ -319,8 +297,6 @@
               soja.</small
             >
           </div>
-
-          <!-- Modo de Preparo -->
           <div
             class="tab-pane fade"
             id="pane-preparo"
@@ -347,8 +323,6 @@
               >Não recomendamos preparo em micro-ondas.</small
             >
           </div>
-
-          <!-- Receitas -->
           <div
             class="tab-pane fade"
             id="pane-receitas"
@@ -358,7 +332,10 @@
           >
             <div class="row g-3">
               <div class="col-sm-6">
-                <a href="./detalhe-receita.html" class="receita-card d-block h-100">
+                <a
+                  href="./detalhe-receita.html"
+                  class="receita-card d-block h-100"
+                >
                   <img
                     src="../img/produtos/receita-macarrao.png"
                     class="receita-img"
@@ -397,8 +374,6 @@
           </div>
         </div>
       </section>
-
-      <!-- ========= RECOMENDAÇÕES (fora das abas, antes do footer) ========= -->
       <hr class="my-5" />
       <section aria-labelledby="titulo-recomenda">
         <h2 id="titulo-recomenda" class="h5 mb-3">Recomendações para você</h2>
@@ -454,8 +429,6 @@
         </div>
       </section>
     </main>
-
-    <!-- ================= FOOTER ================= -->
     <footer class="footer-swift text-light mt-5">
       <div class="container">
         <div class="footer-top">
@@ -617,9 +590,7 @@
           </p>
         </div>
       </div>
-    </footer>
-
-    <!-- JS -->
+    </footer>ß
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/main.js"></script>
   </body>
